# master-thesis

./: .gitignore  README.md
ejecta/: bns.py  function_new.py  nsbh.py
ejecta/.ipynb_checkpoints/: bns_new-checkpoint.py  formula_selector-checkpoint.py  function_new-checkpoint.py  functions-checkpoint.py  nsbh-checkpoint.py
ejecta/physics/jet/: data_gen.py  emulator_mlp.pt  lightcurve_pca_residual.pt  prompt.ipynb  prompt.py  prompt_dyn.py  prompt_emulator.pt  prompt_example.ipynb  prompt_nb.ipynb  surrogate_prompt.ipynb
ejecta/physics/jet/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  prompt-checkpoint.ipynb  prompt_example-checkpoint.ipynb  prompt_nb-checkpoint.ipynb  prompt_progenitor-checkpoint.py  (+1 more)
ejecta/physics/jet/promptx/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ejecta/physics/jet/promptx/docs/source/: README.rst  conf.py  index.rst  modules.rst  promptx.rst
ejecta/physics/jet/promptx/scripts/: Untitled.ipynb  Untitled1.ipynb  examples.py
ejecta/physics/jet/promptx/scripts/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb
ejecta/physics/jet/promptx/scripts/promptx/: const.py  jet2.py  magnetar.py  magnetar_enhanced.py
ejecta/physics/jet/promptx/scripts/promptx/.ipynb_checkpoints/: jet-checkpoint.py  wind_enhanced-checkpoint.py
ejecta/physics/kilonova/: lightcurve_base.py  mosfit_lightcurve.py  thermal_radiation.py
ejecta2/: data_gen.py  merge_chunks.py  prompt_progenitor.py
ejecta2/scripts/: functions.py  units_conversion.py
kameroula/scripts/: bns.py  const.py  helper.py  jet.py
(+15 files in other folders)
